--- a/TCWDC 2.0/3. JS/javascript.html
+++ b/TCWDC 2.0/3. JS/javascript.html
@@ -6,9 +6,10 @@
         <title>JavaScript</title>
     </head>
     <body>
-        <p>Hello World!</p>
+        <p id="text">Hello World!</p>
         <script type="text/javascript">
-            alert("HI");
+            //Wussup
+            document.getElementById("text").innerHTML = "Hello Costa!";
         </script>
     </body>
 </html>
