--- a/TCWDC 2.0/3. JS/javascript.html
+++ b/TCWDC 2.0/3. JS/javascript.html
@@ -8,12 +8,17 @@
     <body>
         <p id="text">Hello World!</p>
         <button id="myButton">Change Text</button>
+        <p id="secondparagraph">JavaScript is ...</p>
+        <button id="my2Button">Append Text</button>
         <script type="text/javascript">
             //Wussup
-            
+            var changetxt = document.getElementById("secondparagraph").innerHTML
             // document.getElementById("text").innerHTML = "Hello Costa!";
-            document.getElementById("text").onclick = function(){
+            document.getElementById("myButton").onclick = function(){
                 document.getElementById("text").innerHTML = "Hello Costa!";
+            }
+            document.getElementById("my2Button").onclick = function(){
+                document.getElementById("secondparagraph").innerHTML = "I think "+changetxt+ " Confusing!";
             }
         </script>
     </body>
