Slight Adjusts to formatting

--- a/TCWDC 2.0/3. JS/javascript.html
+++ b/TCWDC 2.0/3. JS/javascript.html
@@ -11,7 +11,12 @@
         <p id="secondparagraph">JavaScript is ...</p>
         <button id="my2Button">Append Text</button>
         <p id="contentpara"></p>
-        <button id="contentButton">Append Text</button>
+        <button id="contentButton">Create Text</button>
+
+
+
+
+        
         <script type="text/javascript">
             //Wussup
             var changetxt = document.getElementById("secondparagraph").innerHTML
