--- a/TCWDC 2.0/3. JS/javascript.html
+++ b/TCWDC 2.0/3. JS/javascript.html
@@ -14,6 +14,10 @@
         <button id="contentButton">Create Text</button>
 
 
+        <p id="moretext">This is some text</p>
+        <button id="styleText">Style This!</button>
+
+
 
 
         
@@ -29,6 +33,11 @@
             }
             document.getElementById("contentButton").onclick = function(){
                 document.getElementById("contentpara").innerHTML = "Here I am! This is Me!";
+            }
+            document.getElementById("styleText").onclick = function(){
+                document.getElementById("moretext").style.color = "red";
+                document.getElementById("moretext").style.fontSize = "50px";
+                document.getElementById("moretext").style.display = "none";
             }
         </script>
     </body>
