--- a/TCWDC 2.0/3. JS/arrays.html
+++ b/TCWDC 2.0/3. JS/arrays.html
@@ -17,7 +17,7 @@
             
             tweets.push("I dont like tea!");
             console.log(tweets);
-            tweets.splice(1,1,"Cornflakes for breakfast!");
+            tweets.splice(1,1,"Cornflakes for breakfast!", "Num Num");
             console.log(tweets);
         </script>
     </body>
